[SCENEBUILDER] FindBugs: killed DM_NUMBER_CTOR